[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "firsttest"   
description = "Auto sample from data images and video"
authors = ["Kab Seok Kang"]
readme = "README.md"
packages = [{include = "auto_sampler"}]
repository = "https://github.com/kangkabseok2021/FirstTest"
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "1.23.4" 
tqdm = "^4.64.0"
scipy = "^1.10.1"
scikit-learn = "^1.1.1"
regex = "^2021.11.2"
ftfy = "^6.1.1"
fire = "^0.5.0"
opencv-python = "^4.7.0.68"

# [tool.poetry.dev-dependencies]
[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.1"
pre-commit = "^3.3.3"
Pillow = "^9.1.1"
black = "^22.6.0"

[tool.pytest] # pytest config
ini_options.addopts = "-p no:warnings --cov"

[tool.coverage] # pytest coverage config
run.source = ["src/ml_core/"]
run.omit = ["**/__init__.py", "**/__main__.py"]
report.exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:"
]

[tool.black]
line-length = 99

